Fixed alignment on login page

--- a/src/components/screen/Login.css
+++ b/src/components/screen/Login.css
@@ -41,20 +41,22 @@
 
 .login__body{
     position: absolute;
-    top: 30%;
+    top: 20%;
     margin-left: auto;
     margin-right: auto;
     z-index: 1;
     color: #fff;
-    padding: 20px;
+    padding: 50px;
     text-align: left;
+    width: 60%;
     left: 0;
     right: 0;
 }
 
 .login__body > h1{
-    font-size: 3.125rem;
+    font-size: 4.125rem;
     margin-bottom: 20px;
+    font-weight: 800;
 }
 
 .login__body > h2{
